<resources>
    <string name="app_name">Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="brasil">Brasil</string>
    <string name="sao_paulo">São Paulo</string>
    <string name="banner_inicial_dos_pacotes">Banner inicial dos pacotes</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="imagem_do_pacote">Imagem do pacote</string>
    <string name="preco_final">Preço final:</string>
    <string name="pagamento_activity_instrucao">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_do_cartao">Número do cartão</string>
    <string name="mes">MM</string>
    <string name="ano">AA</string>
    <string name="cvc_do_cartao">CVC</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="resumo_da_compra">Confira o resumo da compra:</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso.</string>
    <string name="conteudo_do_banner_inicial">Conteúdo do banner inicial</string>
</resources>