<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PagamentoActivity">

    <TextView
        android:id="@+id/activity_pagamento_instrucoes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/pagamento_activity_instrucao"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_pagamento_titulo_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_instrucoes" />

    <TextView
        android:id="@+id/activity_pagamento_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_titulo_valor"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_titulo_valor"
        tools:text="R$421,50" />

    <EditText
        android:id="@+id/activity_pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/numero_do_cartao"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_pagamento_valor" />

    <EditText
        android:id="@+id/activity_pagamento_mes_cartao"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/mes"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/activity_pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_numero_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_ano_cartao"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/ano"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/activity_pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@id/activity_pagamento_mes_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        android:gravity="center_horizontal"
        android:hint="@string/cvc_do_cartao"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/activity_pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_numero_cartao" />

    <EditText
        android:id="@+id/activity_pagamento_nome_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome_no_cartao"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/activity_pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_cvc_cartao" />

    <Button
        android:id="@+id/activity_pagamento_botao_finaliza_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_arredondado_laranja"
        android:text="@string/finalizar_compra"
        android:textColor="@color/white"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="@id/activity_pagamento_nome_cartao"
        app:layout_constraintStart_toStartOf="@id/activity_pagamento_nome_cartao"
        app:layout_constraintTop_toBottomOf="@id/activity_pagamento_nome_cartao" />
</androidx.constraintlayout.widget.ConstraintLayout>