<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_banner_inicial"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:src="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/conteudo_do_banner_inicial" />

    <TextView
        android:id="@+id/resumo_compra_agradecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="Parabéns!"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_banner_inicial"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_confirmacao_de_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/compra_realizada_com_sucesso"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_agradecimento"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_agradecimento"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_agradecimento" />

    <TextView
        android:id="@+id/resumo_compra_confira_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/resumo_da_compra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_banner_inicial" />

    <ImageView
        android:id="@+id/resumo_compra_imagem"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_confira_resumo"
        tools:srcCompat="@drawable/sao_paulo_sp"
        android:contentDescription="@string/imagem_do_pacote"/>

    <TextView
        android:id="@+id/resumo_compra_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_imagem"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumo_compra_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_local"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_local"
        tools:text="25/02 - 27/02 de 2023" />

    <TextView
        android:id="@+id/resumo_compra_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_data"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_data"
        tools:text="R$243,99" />

</androidx.constraintlayout.widget.ConstraintLayout>